# CellularAutomata

./: CMakeLists.txt  glad.c  main.cpp
